# Grounding-API-Demo

./: .gitignore  README.md
backend/: README.md  pyproject.toml  railpack.json  railway.toml  requirements.txt
backend/app/: config.py  costs.py  db.py  judge.py  main.py  query_log.py  runner.py  schemas.py
backend/app/providers/: _retrieval.py  base.py  brave.py  claude.py  exa.py  gemini.py  openai_ws.py  parallel.py  perplexity.py  tavily.py
backend/tests/: test_costs.py  test_query_log.py  test_retrieval_providers.py  test_runner.py
frontend/: next.config.ts  package-lock.json  package.json  railway.toml
frontend/app/: globals.css  icon.tsx  layout.tsx  page.tsx
frontend/app/compare/: page.tsx
frontend/app/runs/[id]/: page.tsx
frontend/components/: AboutGrounding.tsx  CitationList.tsx  HowItWorks.tsx  JudgeLegend.tsx  JudgeScore.tsx  MetricsBar.tsx  ProviderCard.tsx  QueryForm.tsx  ResultsGrid.tsx
frontend/lib/: api.ts
